--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../Styles/main.css">
-  <link rel="shortcut icon" href="../Src/Images/Icons/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="shortcut icon" href="../src/images/icons/favicon.ico" type="image/x-icon">
   <title>Storm creations - about me</title>
 </head>
 
@@ -27,16 +27,16 @@
             <a class="nav-link" href="../index.html">Home</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="../Pages/projects.html">Projects</a>
+            <a class="nav-link" href="../pages/projects.html">Projects</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link active" aria-current="page" href="../Pages/about-me.html">About me</a>
+            <a class="nav-link active" aria-current="page" href="../pages/about-me.html">About me</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="../Pages/blog.html">Blog</a>
+            <a class="nav-link" href="../pages/blog.html">Blog</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="../Pages/contact.html">Contact</a>
+            <a class="nav-link" href="../pages/contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -47,7 +47,7 @@
 
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Projects/Unity_related/code-snippet-thumbnail.png" alt="Hero image">
+        <img src="../src/images/projects/unity_related/code-snippet-thumbnail.png" alt="Hero image">
         <h1>About me</h1>
       </div>
     </section>
@@ -65,7 +65,7 @@
     <section class="container text-center">
       <div class="row mb-5">
         <div class="col-md mt-5">
-          <img src="../Src/Images/Profile/profile_thumbnail.png" class="img-fluid rounded-5 mx-auto mb-4 p-3" alt="profile picture">
+          <img src="../src/images/profile/profile_thumbnail.png" class="img-fluid rounded-5 mx-auto mb-4 p-3" alt="profile picture">
 
         </div>
         <div class="col-md-6 offset-md-2 align-self-center">
@@ -84,8 +84,8 @@
     <div class="divider"></div>
 
     <section class="about__grid">
-      <img src="../Src/Images/dummy-image.webp" alt="interest picture">
-      <img src="../Src/Images/dummy-image.webp" alt="interest picture">
+      <img src="../src/images/dummy-image.webp" alt="interest picture">
+      <img src="../src/images/dummy-image.webp" alt="interest picture">
     </section>
 
     <section id="info__paragraph">
@@ -97,7 +97,7 @@
 
     <div class="divider"> </div>
 
-      <img class="img-fluid d-flex rounded-5 mx-auto align-content-center mt-5" src="../Src/Images/dummy-image.webp" alt="interest picture">
+      <img class="img-fluid d-flex rounded-5 mx-auto align-content-center mt-5" src="../src/images/dummy-image.webp" alt="interest picture">
 
     <section id="info__paragraph">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat a, deleniti magnam aspernatur eveniet alias,
@@ -124,8 +124,8 @@
           </div>
           <div class="col-sm">
             
-           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../Src/Images/Logos/GitHub_Logo_White.png" alt="footer brands"></a>
-           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../Src/Images/Logos/Upwork-logo-white.png" alt="footer brands"></a>
+           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/gitHub_Logo_White.png" alt="footer brands"></a>
+           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/upwork-logo-white.png" alt="footer brands"></a>
 
           </div>
         </div>
