--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../Styles/main.css">
-  <link rel="shortcut icon" href="../Src/Images/Icons/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="shortcut icon" href="../src/images/icons/favicon.ico" type="image/x-icon">
   <title>Storm creations - blog</title>
 </head>
 
@@ -28,16 +28,16 @@
               <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="../Pages/projects.html">Projects</a>
+              <a class="nav-link" href="../pages/projects.html">Projects</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="../Pages/about-me.html">About me</a>
+              <a class="nav-link" href="../pages/about-me.html">About me</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link active" aria-current="page" href="../Pages/blog.html">Blog</a>
+              <a class="nav-link active" aria-current="page" href="../pages/blog.html">Blog</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="../Pages/contact.html">Contact</a>
+              <a class="nav-link" href="../pages/contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
     <!-- hero title and image -->
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Projects/Unity_related/minecraft-project-thumbnail.webp" alt="Hero image">
+        <img src="../src/images/projects/unity_related/minecraft-project-thumbnail.webp" alt="Hero image">
         <h1>Blog</h1>
       </div>
     </section>
@@ -69,7 +69,7 @@
     <section class="blog__grid">
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
-          <img src="../Src/Images/dummy-image.webp" alt="blog entry image">
+          <img src="../src/images/dummy-image.webp" alt="blog entry image">
           <p>01/01/<span>2023<span></p>
         </div>
 
@@ -88,7 +88,7 @@
 
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
-          <img src="../Src/Images/dummy-image.webp" alt="blog entry image">
+          <img src="../src/images/dummy-image.webp" alt="blog entry image">
           <p>01/01/<span>2023<span></p>
         </div>
 
@@ -107,7 +107,7 @@
 
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
-          <img src="../Src/Images/dummy-image.webp" alt="blog entry image">
+          <img src="../src/images/dummy-image.webp" alt="blog entry image">
           <p>01/01/<span>2023<span></p>
         </div>
 
@@ -126,7 +126,7 @@
 
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
-          <img src="../Src/Images/dummy-image.webp" alt="blog entry image">
+          <img src="../src/images/dummy-image.webp" alt="blog entry image">
           <p>01/01/<span>2023<span></p>
         </div>
 
@@ -173,8 +173,8 @@
           </div>
           <div class="col-sm">
             
-           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../Src/Images/Logos/GitHub_Logo_White.png" alt="footer brands"></a>
-           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../Src/Images/Logos/Upwork-logo-white.png" alt="footer brands"></a>
+           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/gitHub_Logo_White.png" alt="footer brands"></a>
+           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/upwork-logo-white.png" alt="footer brands"></a>
 
           </div>
         </div>
