--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../Styles/main.css">
-  <link rel="shortcut icon" href="../Src/Images/Icons/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="shortcut icon" href="../src/images/icons/favicon.ico" type="image/x-icon">
   <title>Storm creations - contact</title>
 </head>
 
@@ -28,16 +28,16 @@
               <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="../Pages/projects.html">Projects</a>
+              <a class="nav-link" href="../pages/projects.html">Projects</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="../Pages/about-me.html">About me</a>
+              <a class="nav-link" href="../pages/about-me.html">About me</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="../Pages/blog.html">Blog</a>
+              <a class="nav-link" href="../pages/blog.html">Blog</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link active" aria-current="page" href="../Pages/contact.html">Contact</a>
+              <a class="nav-link active" aria-current="page" href="../pages/contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
     <!-- hero title and image -->
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Projects/Blender_related/dmr-thumbnail.webp" alt="Hero image">
+        <img src="../src/images/projects/blender_related/dmr-thumbnail.webp" alt="Hero image">
         <h1>Contact</h1>
       </div>
     </section>
@@ -65,7 +65,7 @@
     <!-- contact form  -->
     <section class="contact__form-container">
       <div class="contact__form-logo">
-        <img src="../Src/Images/Logos/Dummy_logo.png" alt="site logo">
+        <img src="../src/images/logos/dummy_logo.png" alt="site logo">
       </div>
 
       <div class="contact__form-div">
@@ -100,8 +100,8 @@
           </div>
           <div class="col-sm">
             
-           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../Src/Images/Logos/GitHub_Logo_White.png" alt="footer brands"></a>
-           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../Src/Images/Logos/Upwork-logo-white.png" alt="footer brands"></a>
+           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/gitHub_Logo_White.png" alt="footer brands"></a>
+           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/upwork-logo-white.png" alt="footer brands"></a>
 
           </div>
         </div>
