--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../Styles/main.css">
-  <link rel="shortcut icon" href="../Src/Images/Icons/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="shortcut icon" href="../src/images/icons/favicon.ico" type="image/x-icon">
   <title>Storm creations - projects</title>
 </head>
 
@@ -28,16 +28,16 @@
               <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link active" aria-current="page" href="../Pages/projects.html">Projects</a>
+              <a class="nav-link active" aria-current="page" href="../pages/projects.html">Projects</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="../Pages/about-me.html">About me</a>
+              <a class="nav-link" href="../pages/about-me.html">About me</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="../Pages/blog.html">Blog</a>
+              <a class="nav-link" href="../pages/blog.html">Blog</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="../Pages/contact.html">Contact</a>
+              <a class="nav-link" href="../pages/contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
     <!-- hero title and image -->
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Projects/Blender_related/smg-uv-thumbnail.webp" alt="Hero image">
+        <img src="../src/images/projects/blender_related/smg-uv-thumbnail.webp" alt="Hero image">
         <h1>Projects</h1>
       </div>
     </section>
@@ -65,40 +65,40 @@
       </div>
 
       <div class="projects__grid">
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/ai-battle-thumbnail.gif" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../src/images/projects/unity_related/ai-battle-thumbnail.gif" alt="project thumbnail">
           <p> AI battle camp</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/energy-sword-shader-thumbnail.gif"
+        <div class="projects__grid-image-container"><img src="../src/images/projects/unity_related/energy-sword-shader-thumbnail.gif"
             alt="project thumbnail">
           <p> Energy sword shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/vehicle-physics-thumbnail.webp"
+        <div class="projects__grid-image-container"><img src="../src/images/projects/unity_related/vehicle-physics-thumbnail.webp"
             alt="project thumbnail">
           <p> Vehicle physics simulator</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/minecraft-project-thumbnail.webp"
+        <div class="projects__grid-image-container"><img src="../src/images/projects/unity_related/minecraft-project-thumbnail.webp"
             alt="project thumbnail">
           <p> Minecraft like Voxel generation</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/bullet-tracking-thumbnail.gif"
+        <div class="projects__grid-image-container"><img src="../src/images/projects/unity_related/bullet-tracking-thumbnail.gif"
             alt="project thumbnail">
           <p> Bullet tracking </p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/laser-shader-thumbnail.gif" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../src/images/projects/unity_related/laser-shader-thumbnail.gif" alt="project thumbnail">
           <p> Laser shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/water-depth-shader-thumbnail.webp"
+        <div class="projects__grid-image-container"><img src="../src/images/projects/unity_related/water-depth-shader-thumbnail.webp"
             alt="project thumbnail">
           <p> Water depth shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/energy-shield-shader-thumbnail.webp"
+        <div class="projects__grid-image-container"><img src="../src/images/projects/unity_related/energy-shield-shader-thumbnail.webp"
             alt="project thumbnail">
           <p> Energy shield shader</p>
         </div>
@@ -118,12 +118,12 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unreal_related/volumetric-clouds-shader-thumbnail.webp"
+        <div class="projects__grid-image-container"><img src="../src/images/projects/unreal_related/volumetric-clouds-shader-thumbnail.webp"
             alt="project thumbnail">
           <p> Volumetric clouds shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unreal_related/Thermal_vision_thumbnail.gif" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../src/images/projects/unreal_related/thermal_vision_thumbnail.gif" alt="project thumbnail">
           <p> Thermal vision shader </p>
         </div>
 
@@ -143,19 +143,19 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/smg-thumbnail.webp" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../src/images/projects/blender_related/smg-thumbnail.webp" alt="project thumbnail">
           <p> Halo custom SMG</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/ar-thumbnail.webp" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../src/images/projects/blender_related/ar-thumbnail.webp" alt="project thumbnail">
           <p> Halo custom assault rifle</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/br-thumbnail.webp" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../src/images/projects/blender_related/br-thumbnail.webp" alt="project thumbnail">
           <p> Halo custom battle rifle</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/dmr-thumbnail.webp" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../src/images/projects/blender_related/dmr-thumbnail.webp" alt="project thumbnail">
           <p> Halo custom DMR</p>
         </div>
 
@@ -175,25 +175,25 @@
       <div class="projects__grid">
 
         <div class="projects__grid-image-container">
-          <a href="https://ipdlz.com" target="_blank"> <img src="../Src/Images/Projects/Wordpress_related/ipdlz-thumbnail.webp"
+          <a href="https://ipdlz.com" target="_blank"> <img src="../src/images/projects/wordpress_related/ipdlz-thumbnail.webp"
               alt="project thumbnail"> <p> iPdlz - pickleball bands </p>
           </a>
         </div>
 
         <div class="projects__grid-image-container">
-          <a href="https://www.clocompany.com" target="_blank"> <img src="../Src/Images/Projects/Wordpress_related/clo-company-thumbnail.webp"
+          <a href="https://www.clocompany.com" target="_blank"> <img src="../src/images/projects/wordpress_related/clo-company-thumbnail.webp"
               alt="project thumbnail"> <p> CLO company </p>
           </a>
         </div>
 
         <div class="projects__grid-image-container">
-          <a href="https://getback.tech" target="_blank"> <img src="../Src/Images/Projects/Wordpress_related/getback-thumbnail.webp"
+          <a href="https://getback.tech" target="_blank"> <img src="../src/images/projects/wordpress_related/getback-thumbnail.webp"
               alt="project thumbnail"> <p> Getback </p>
           </a>
         </div>
 
         <div class="projects__grid-image-container">
-          <a href="https://tamalesdonalberto.com" target="_blank"> <img src="../Src/Images/Projects/Wordpress_related/tamales-don-alberto-thumbnail.webp"
+          <a href="https://tamalesdonalberto.com" target="_blank"> <img src="../src/images/projects/wordpress_related/tamales-don-alberto-thumbnail.webp"
               alt="project thumbnail"> <p> Tamales Don Alberto</p>
           </a>
         </div>
@@ -213,7 +213,7 @@
       <div class="projects__grid">
 
         <div class="projects__grid-image-container">
-          <a href="https://custompickleballbands.com" target="_blank"> <img src="../Src/Images/Projects/Shopify_related/custom_pickleballs_thumbnail.webp"
+          <a href="https://custompickleballbands.com" target="_blank"> <img src="../src/images/projects/shopify_related/custom_pickleballs_thumbnail.webp"
               alt="project thumbnail"> <p> Custom pickleball bands</p>
           </a>
         
@@ -239,8 +239,8 @@
           </div>
           <div class="col-sm">
             
-           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../Src/Images/Logos/GitHub_Logo_White.png" alt="footer brands"></a>
-           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../Src/Images/Logos/Upwork-logo-white.png" alt="footer brands"></a>
+           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/gitHub_Logo_White.png" alt="footer brands"></a>
+           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../src/images/logos/upwork-logo-white.png" alt="footer brands"></a>
 
           </div>
         </div>
