--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./Styles/main.css">
-  <link rel="shortcut icon" href="./Src/Images/Icons/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="shortcut icon" href="./src/images/icons/favicon.ico" type="image/x-icon">
   <title>Storm creations portfolio</title>
 </head>
 
@@ -27,16 +27,16 @@
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="./Pages/projects.html">Projects</a>
+              <a class="nav-link" href="./pages/projects.html">Projects</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="./Pages/about-me.html">About me</a>
+              <a class="nav-link" href="./pages/about-me.html">About me</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="./Pages/blog.html">Blog</a>
+              <a class="nav-link" href="./pages/blog.html">Blog</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="./Pages/contact.html">Contact</a>
+              <a class="nav-link" href="./pages/contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
     <section>
       <div class="hero__container">
         <div class="hero__container-logo">
-          <a href="./index.html"><img src="./Src/Images/Logos/Dummy_logo.png" alt="site logo"></a>
+          <a href="./index.html"><img src="./src/images/logos/dummy_logo.png" alt="site logo"></a>
           <h1 class="text-center mb-5">Web developer & <br> Game developer <span>Generalist </span></h1>
         </div>
 
@@ -57,23 +57,23 @@
             <div class="carousel-inner h-100">
 
               <div class="carousel-item active h-100">
-                <img src="./Src/Images/Projects/Blender_related/dmr-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./src/images/projects/blender_related/dmr-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/Projects/Blender_related/ar-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./src/images/projects/blender_related/ar-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/Projects/Wordpress_related/tamales-don-alberto-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./src/images/projects/wordpress_related/tamales-don-alberto-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/Projects/Unity_related/vehicle-physics-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./src/images/projects/unity_related/vehicle-physics-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/Projects/Blender_related/smg-uv-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./src/images/projects/blender_related/smg-uv-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
             </div>
@@ -115,7 +115,7 @@
           <p>
             If you wish to learn more about me, click the button below 
           </p>
-        <a href="./Pages/about-me.html"><button type="button" class="redirection__button"> More about me</button></a>
+        <a href="./pages/about-me.html"><button type="button" class="redirection__button"> More about me</button></a>
       </div>
     </section>
 
@@ -129,12 +129,12 @@
       </div>
 
       <div class="app__icons-grid">
-        <img src="./Src/Images/Logos/U_Logo_Small_White_RGB_1C.png" alt="Unity logo">
-        <img src="./Src/Images/Logos/Blender_logo.png" alt="Blender logo">
-        <img src="./Src/Images/Logos/UE_Logo_stacked_unreal-engine_white.png" alt="Unreal engine logo">
-        <img src="./Src/Images/Logos/shopify-mono-white.png" alt="Blender logo">
-        <img src="./Src/Images/Logos/WordPress-logotype-alternative-white.png" alt="Wordpress logo">
-        <img src="./Src/Images/Logos/WIX_logo.png" alt="Blender logo">
+        <img src="./src/images/logos/u_Logo_Small_White_RGB_1C.png" alt="Unity logo">
+        <img src="./src/images/logos/blender_logo.png" alt="Blender logo">
+        <img src="./src/images/logos/ue_Logo_stacked_unreal-engine_white.png" alt="Unreal engine logo">
+        <img src="./src/images/logos/shopify-mono-white.png" alt="Blender logo">
+        <img src="./src/images/logos/wordPress-logotype-alternative-white.png" alt="Wordpress logo">
+        <img src="./src/images/logos/wix_logo.png" alt="Blender logo">
 
       </div>
 
@@ -149,7 +149,7 @@
           corporis
           doloremque doloribus culpa autem quas, nemo sequi, recusandae sit. Ex quidem accusantium, dolor sapiente quis
           nulla sunt.</p>
-        <a href="./Pages/projects.html"><button type="button" class="redirection__button"> My projects </button></a>
+        <a href="./pages/projects.html"><button type="button" class="redirection__button"> My projects </button></a>
       </div>
     </section>
 
@@ -165,7 +165,7 @@
       <div class="centered__container-text">
         <p>If any of my previous projects caught your atention and you are looking to hire me, click the button below to
           be redirected to the contact page</p>
-        <a href="./Pages/contact.html"><button type="button" class="redirection__button"> Contact me</button></a>
+        <a href="./pages/contact.html"><button type="button" class="redirection__button"> Contact me</button></a>
       </div>
     </section>
 
@@ -186,8 +186,8 @@
           </div>
           <div class="col-sm">
             
-           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="./Src/Images/Logos/GitHub_Logo_White.png" alt="footer brands"></a>
-           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="./Src/Images/Logos/Upwork-logo-white.png" alt="footer brands"></a>
+           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="./src/images/logos/gitHub_Logo_White.png" alt="footer brands"></a>
+           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="./src/images/logos/upwork-logo-white.png" alt="footer brands"></a>
 
           </div>
         </div>
